force-app/main/default/objects/ssot__CareRequestReviewer__dlm/fields/ssot__CareRequestReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareRequestReferenceObject__c</fullName>
    <label>Care Request Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareRequestReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>