force-app/main/default/objects/ssot__CareRequestReviewer__dlm/fields/ssot__rel_1716722509311_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716722509311_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareRequestReviewer_ReviewerId_map_H_rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>CareRequestReviewer_ReviewerId_map_H_rel</relationshipLabel>
    <relationshipName>rel_1716722509311_end</relationshipName>
    <type>Lookup</type>
</CustomField>