force-app/main/default/objects/ssot__CareRequestReviewer__dlm/fields/ssot__rel_1716726061722_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726061722_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareRequestReviewer_CareRequestRefer_rel</label>
    <referenceTo>ssot__CareRequestItem__dlm</referenceTo>
    <relationshipLabel>CareRequestReviewer_CareRequestRefer_rel</relationshipLabel>
    <relationshipName>rel_1716726061722_end</relationshipName>
    <type>Lookup</type>
</CustomField>