force-app/main/default/objects/ssot__CareRequestReviewer__dlm/fields/ssot__ReviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReviewDateTime__c</fullName>
    <label>ReviewDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReviewDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>