force-app/main/default/objects/ssot__CareRequestReviewer__dlm/fields/ssot__ReviewerType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReviewerType__c</fullName>
    <label>ReviewerType</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReviewerType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>